--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -59,6 +59,7 @@
 	"*Please select lecture File": "*يرجى إختيار ملف المحاضرة",
 	"*Please select promo video": "*يرجى إختيار الفيديو التوضيحى",
 	"*Please select subject": "*يرجى إختيار المادة",
+	"0111107715": "0111107715",
 	"1st": "الصف الأول الثانوي",
 	"2nd": "الصف الثاني الثانوي",
 	"3rd": "الصف الثالث الثانوي",
@@ -78,6 +79,7 @@
 	"Add New Lecture": "إضافة محاضره جديده",
 	"Add to Cart": "إضافة للسلة",
 	"Added to cart": "إضافة للسلة",
+	"Advanced Search": "Advanced Search",
 	"All Courses": "كل الكورسات",
 	"All Rights Reserved": "كل الحقوق محفوظة",
 	"All Teachers": "All Teachers",
@@ -132,8 +134,10 @@
 	"Create Lecture": "إنشاء محاضرة",
 	"Create New Course": "أنشئ كورس جديد",
 	"Dashboard": "واجهة العرض",
+	"Date": "Date",
 	"Deactivated Successfully": "تم الإلغاء بنجاح",
 	"Description": "الوصف",
+	"Do you want to play the from this browser": "Do you want to play the from this browser",
 	"Don't have an account?": "ليس لديك حساب?",
 	"Draft": "مسودة",
 	"Duration": "الوقت",
@@ -230,9 +234,7 @@
 	"My Dashboard": "الرئيسية",
 	"Newest Courses": "الكورسات الجديد",
 	"Next": "التالى",
-  "No": "رفض",
-  "block":"حظر",
-  "Unblock":"حذف الحظر",
+	"No": "رفض",
 	"No Description": "No Description",
 	"No result found": "لا توجد نتائج",
 	"Or": "أو",
@@ -268,10 +270,14 @@
 	"Reset Password": "تغيير كلمة المرور",
 	"Reset Your Password": "تغيير كلمة المرور",
 	"Reset link Sent, Please Check Your mail": "تم إرسال ايميل  تغيير كلمة المرور, يرجى تفقد البريد الإلكتروني",
+	"Restricted Users": "Restricted Users",
+	"Restricted users": "Restricted users",
 	"Save Chapter": "حفظ الفصل ",
 	"Save Lecture": "حفظ المحاضره",
 	"Science": "جولوجيا",
 	"Search": "البحث",
+	"Search ": "Search ",
+	"Search By": "Search By",
 	"Search by Email or Phone Number": "البحث بواسطه رقم الموبايل او الإيميل",
 	"Secure checkout": "الدفع المؤمن",
 	"See all": "عرض الكل",
@@ -286,6 +292,7 @@
 	"Sign Up": "الإشتراك",
 	"Sign Up and Start Learning!": "قم بالإشتراك وابدأ التعلم",
 	"Smart Academy": "سمارت أكاديمي",
+	"Sorry your account is blocked if you want to unblock it ": "Sorry your account is blocked if you want to unblock it ",
 	"Sorry your link is expired, please contact the administrator": {
 		"": "نأسف ل انتهاء مدة   العرض لهذا الرابط, يرجى التواصل مع  المسؤل."
 	},
@@ -317,8 +324,10 @@
 	"Total Courses": "اجمالى الكورسات",
 	"Total Sales": "اجمالى المبيعات",
 	"Total Students": "اجمالى الطلاب",
+	"Unblock": "حذف الحظر",
 	"Unexpected error occurred, please try again": "حدث خطأ غير متوقع, يرجى المحاولة مرة اخرى",
 	"Upload Video or File*": "حمل فيديو / ملف*",
+	"User Name": "User Name",
 	"View Saved Chapters": "عرض الفصول المسجلة",
 	"View Saved Lecture": "عرض المحاضرات المسجلة",
 	"Welcome Back": "مرحبا بعودتك",
@@ -337,7 +346,15 @@
 		"": "لا يدعم المتصفح الخاص بك هذا الامتداد."
 	},
 	"Your order submitted successfully": "لقد تم تسجيل طلبك بنجاح",
+	"abdelrahm": {
+		"osama": {
+			"awad500@gmail": {
+				"com\t": "abdelrahm.osama.awad500@gmail.com\t"
+			}
+		}
+	},
 	"and": "و",
+	"block": "حظر",
 	"cancel": "إلغاء",
 	"cancel edit": "إلغاء التعديل",
 	"chapter name:": "اسم الفصل:",
@@ -362,6 +379,7 @@
 	"lectures": "المحاضرات",
 	"level": "الصف",
 	"m": "د",
+	"mohamed ahmed": "mohamed ahmed",
 	"password": "كلمة المرور",
 	"password doesn't match": "كلمة المرور غير متطابقة",
 	"phone number": "رقم الموبايل",
