--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,6 +59,7 @@
 	"*Please select lecture File": "*Please select lecture File",
 	"*Please select promo video": "*Please select promo video",
 	"*Please select subject": "*Please select subject",
+	"0111107715": "0111107715",
 	"1st": "First grade secondary",
 	"2nd": "Second grade secondary",
 	"3rd": "Third grade secondary",
@@ -78,6 +79,7 @@
 	"Add New Lecture": "Add New Lecture",
 	"Add to Cart": "Add to Cart",
 	"Added to cart": "Added to cart",
+	"Advanced Search": "Advanced Search",
 	"All Courses": "All Courses",
 	"All Rights Reserved": "All Rights Reserved",
 	"All Teachers": "All Teachers",
@@ -132,8 +134,10 @@
 	"Create Lecture": "Create Lecture",
 	"Create New Course": "Create New Course",
 	"Dashboard": "Dashboard",
+	"Date": "Date",
 	"Deactivated Successfully": "Deactivated Successfully",
 	"Description": "Description",
+	"Do you want to play the from this browser": "Do you want to play the from this browser",
 	"Don't have an account?": "Don't have an account?",
 	"Draft": "Draft",
 	"Duration": "Duration",
@@ -266,10 +270,14 @@
 	"Reset Password": "Reset Password",
 	"Reset Your Password": "Reset Your Password",
 	"Reset link Sent, Please Check Your mail": "Reset link Sent, Please Check Your mail",
+	"Restricted Users": "Restricted Users",
+	"Restricted users": "Restricted users",
 	"Save Chapter": "Save Chapter",
 	"Save Lecture": "Save Lecture",
 	"Science": "Science",
 	"Search": "Search",
+	"Search ": "Search ",
+	"Search By": "Search By",
 	"Search by Email or Phone Number": "Search by Email or Phone Number",
 	"Secure checkout": "Secure checkout",
 	"See all": "See all",
@@ -284,6 +292,7 @@
 	"Sign Up": "Sign Up",
 	"Sign Up and Start Learning!": "Sign Up and Start Learning!",
 	"Smart Academy": "Smart Academy",
+	"Sorry your account is blocked if you want to unblock it ": "Sorry your account is blocked if you want to unblock it ",
 	"Sorry your link is expired, please contact the administrator": {
 		"": "Sorry your link is expired, please contact the administrator."
 	},
@@ -315,8 +324,10 @@
 	"Total Courses": "Total Courses",
 	"Total Sales": "Total Sales",
 	"Total Students": "Total Students",
+	"Unblock": "Unblock",
 	"Unexpected error occurred, please try again": "Unexpected error occurred, please try again",
 	"Upload Video or File*": "Upload Video or File*",
+	"User Name": "User Name",
 	"View Saved Chapters": "View Saved Chapters",
 	"View Saved Lecture": "View Saved Lecture",
 	"Welcome Back": "Welcome Back",
@@ -335,7 +346,15 @@
 		"": "Your browser does not support the video tag."
 	},
 	"Your order submitted successfully": "Your order submitted successfully",
+	"abdelrahm": {
+		"osama": {
+			"awad500@gmail": {
+				"com\t": "abdelrahm.osama.awad500@gmail.com\t"
+			}
+		}
+	},
 	"and": "and",
+	"block": "block",
 	"cancel": "Cancel",
 	"cancel edit": "Cancel Edit",
 	"chapter name:": "Chapter Name:",
@@ -348,9 +367,7 @@
 	"create Date": "Create Date",
 	"email": "Email",
 	"example: Elkashef": "example: Elkashef",
-  "example: Hossam": "example: Hossam",
-  "block":"block",
-  "Unblock":"Unblock",
+	"example: Hossam": "example: Hossam",
 	"fee": "Fee",
 	"first Name": "First Name",
 	"instructor": "Instructor",
@@ -362,6 +379,7 @@
 	"lectures": "Lectures",
 	"level": "Level",
 	"m": "m",
+	"mohamed ahmed": "mohamed ahmed",
 	"password": "Password",
 	"password doesn't match": "Password doesn't match",
 	"phone number": "Phone Number",
