--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,13 +90,16 @@
 	"Are you sure you want to Approve this instructor? ": "Are you sure you want to Approve this instructor? ",
 	"Are you sure you want to Approve this payment of ": "Are you sure you want to Approve this payment of ",
 	"Are you sure you want to Reject this payment of ": "Are you sure you want to Reject this payment of ",
+	"Are you sure you want to block this user? ": "Are you sure you want to block this user? ",
 	"Are you sure you want to delete this chapter?": "Are you sure you want to delete this chapter?",
 	"Are you sure you want to reject this course? ": "Are you sure you want to reject this course? ",
 	"Are you sure you want to reject this instructor? ": "Are you sure you want to reject this instructor? ",
 	"Are you sure you want to remove all chapters?": "Are you sure you want to remove all chapters?",
+	"Are you sure you want to unblock this user? ": "Are you sure you want to unblock this user? ",
 	"Back": "Back",
 	"Back to Home": "Back to Home",
 	"Back to home": "Back to home",
+	"Blocked": "Blocked",
 	"By": "By",
 	"By signing up, you agree to our": "By signing up, you agree to our",
 	"Cancel": "Cancel",
@@ -146,6 +149,10 @@
 	"English": "English",
 	"English Language": "English Language",
 	"Enrolled": "Enrolled",
+	"Enter Email": "Enter Email",
+	"Enter First Name": "Enter First Name",
+	"Enter Last Name": "Enter Last Name",
+	"Enter Mobile Number": "Enter Mobile Number",
 	"Error while creating chapter, please try again": "Error while creating chapter, please try again",
 	"Error while creating course, please try again": "Error while creating course, please try again",
 	"Error while creating lecture, please try again": "Error while creating lecture, please try again",
@@ -329,6 +336,8 @@
 	},
 	"Your order submitted successfully": "Your order submitted successfully",
 	"and": "and",
+	"block": "block",
+	"blocked Successfully": "blocked Successfully",
 	"cancel": "Cancel",
 	"cancel edit": "Cancel Edit",
 	"chapter name:": "Chapter Name:",
@@ -371,6 +380,10 @@
 	"this course contains chapters, can't be deleted": "This course contains chapters, can't be deleted",
 	"time m": "Time m",
 	"unblocked Successfully": "unblocked Successfully",
+	"user email:": "user email:",
+	"user ip:": "user ip:",
+	"user mobile number:": "user mobile number:",
+	"user name:": "user name:",
 	"you Don't have any chapters in this course to view": "you Don't have any chapters in this course to view",
 	"you are logged in successfully": "You are logged in successfully",
 	"you have been reported, and your account has been disabled for violating our terms": "you have been reported, and your account has been disabled for violating our terms",
