--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -90,13 +90,16 @@
 	"Are you sure you want to Approve this instructor? ": "هل تريد الموافقة على هذا المحاضر؟ ",
 	"Are you sure you want to Approve this payment of ": "هل تريد الموافقة على هذا الدفع؟ ",
 	"Are you sure you want to Reject this payment of ": "هل تريد الغا هذا الدفع؟",
+	"Are you sure you want to block this user? ": "Are you sure you want to block this user? ",
 	"Are you sure you want to delete this chapter?": "هل تريد إزالة هذا الفصل ؟",
 	"Are you sure you want to reject this course? ": "هل تريد إلغاء هذا الكورس؟ ",
 	"Are you sure you want to reject this instructor? ": "هل تريد إلغاء هذا المحاضر ؟ ",
 	"Are you sure you want to remove all chapters?": "هل تريد حذف كل الفصول ؟",
+	"Are you sure you want to unblock this user? ": "Are you sure you want to unblock this user? ",
 	"Back": "العودة",
 	"Back to Home": "العودة للرئيسية",
 	"Back to home": "العودة للرئيسية",
+	"Blocked": "Blocked",
 	"By": "بواسطة",
 	"By signing up, you agree to our": "عن طريق الإشتراك أنت توافق على ",
 	"Cancel": "إلغاء",
@@ -146,6 +149,10 @@
 	"English": "لغة انجليزية",
 	"English Language": "لغة انجليزية",
 	"Enrolled": "تم التسجيل",
+	"Enter Email": "Enter Email",
+	"Enter First Name": "Enter First Name",
+	"Enter Last Name": "Enter Last Name",
+	"Enter Mobile Number": "Enter Mobile Number",
 	"Error while creating chapter, please try again": "حدث خطأ خلال الأنشاء , يرجى المحاولة مرة أخرى",
 	"Error while creating course, please try again": "حدث خطأ خلال إنشاء الكورس, يرجى المحاولة مرة اخرى",
 	"Error while creating lecture, please try again": "خدث خطأ خلال إنشاء المحاضرة , يرجى المحاولة مرة اخرى",
@@ -329,6 +336,8 @@
 	},
 	"Your order submitted successfully": "لقد تم تسجيل طلبك بنجاح",
 	"and": "و",
+	"block": "block",
+	"blocked Successfully": "blocked Successfully",
 	"cancel": "إلغاء",
 	"cancel edit": "إلغاء التعديل",
 	"chapter name:": "اسم الفصل:",
@@ -371,6 +380,10 @@
 	"this course contains chapters, can't be deleted": "يحتوى هذا الكورس على فصول , لا يمكن حذفه",
 	"time m": "الوقت د ",
 	"unblocked Successfully": "unblocked Successfully",
+	"user email:": "user email:",
+	"user ip:": "user ip:",
+	"user mobile number:": "user mobile number:",
+	"user name:": "user name:",
 	"you Don't have any chapters in this course to view": "لا يوجد أي فصول لهذا الكورس لعرضها!",
 	"you are logged in successfully": "تم تسجيل الدخول بنجاح",
 	"you have been reported, and your account has been disabled for violating our terms": "you have been reported, and your account has been disabled for violating our terms",
