--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -78,6 +78,7 @@
 	"Add New Lecture": "إضافة محاضره جديده",
 	"Add to Cart": "إضافة للسلة",
 	"Added to cart": "إضافة للسلة",
+	"Advanced Search": "Advanced Search",
 	"All Courses": "كل الكورسات",
 	"All Rights Reserved": "كل الحقوق محفوظة",
 	"Already have an account?": "لديك حساب مسجل بالفعل?",
