--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -78,6 +78,7 @@
 	"Add New Lecture": "Add New Lecture",
 	"Add to Cart": "Add to Cart",
 	"Added to cart": "Added to cart",
+	"Advanced Search": "Advanced Search",
 	"All Courses": "All Courses",
 	"All Rights Reserved": "All Rights Reserved",
 	"Already have an account?": "Already have an account?",
