--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -361,7 +361,9 @@
 	"email": "email",
 	"example: Elkashef": "example: Elkashef",
 	"example: Hossam": "example: Hossam",
-	"fee": "fee",
+  "fee": "fee",
+    "More": "More",
+
 	"first Name": "first Name",
 	"instructor": "instructor",
 	"instructor mobile number:": "instructor mobile number:",
