--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,10 +59,9 @@
 	"*Please select lecture File": "*Please select lecture File",
 	"*Please select promo video": "*Please select promo video",
 	"*Please select subject": "*Please select subject",
-	"---All---": "---All---",
-	"1st": "1st",
-	"2nd": "2nd",
-	"3rd": "3rd",
+	"1st": "First grade secondary",
+	"2nd": "Second grade secondary",
+	"3rd": "Third grade secondary",
 	"About": "About",
 	"Accept": "Accept",
 	"Account created": "Account created",
@@ -85,7 +84,7 @@
 	"Already have an account?": "Already have an account?",
 	"Approve": "Approve",
 	"Approved": "Approved",
-	"Arabic": "Arabic",
+	"Arabic": "عربى",
 	"Arabic Language": "Arabic Language",
 	"Are You Sure?": "Are You Sure?",
 	"Are you sure you want to Approve this course? ": "Are you sure you want to Approve this course? ",
@@ -234,7 +233,6 @@
 	"Math": "Math",
 	"Menu": "Menu",
 	"Minutes": "Minutes",
-	"More": "More",
 	"My Courses": "My Courses",
 	"My Dashboard": "My Dashboard",
 	"Newest Courses": "Newest Courses",
@@ -348,31 +346,29 @@
 	"and": "and",
 	"block": "block",
 	"blocked Successfully": "blocked Successfully",
-	"cancel": "cancel",
-	"cancel edit": "cancel edit",
-	"chapter name:": "chapter name:",
-	"chapters": "chapters",
-	"confirm": "confirm",
+	"cancel": "Cancel",
+	"cancel edit": "Cancel Edit",
+	"chapter name:": "Chapter Name:",
+	"chapters": "Chapters",
+	"confirm": "Confirm",
 	"confirm password": "confirm password",
-	"count": "count",
-	"course Title": "course Title",
-	"course name:": "course name:",
-	"create Date": "create Date",
-	"email": "email",
+	"count": "Count",
+	"course Title": "Course Title",
+	"course name:": "Course Name:",
+	"create Date": "Create Date",
+	"email": "Email",
 	"example: Elkashef": "example: Elkashef",
 	"example: Hossam": "example: Hossam",
-  "fee": "fee",
-    "More": "More",
-
-	"first Name": "first Name",
-	"instructor": "instructor",
-	"instructor mobile number:": "instructor mobile number:",
-	"instructor name:": "instructor name:",
-	"language": "language",
-	"last Name": "last Name",
-	"lecture": "lecture",
-	"lectures": "lectures",
-	"level": "level",
+	"fee": "Fee",
+	"first Name": "First Name",
+	"instructor": "Instructor",
+	"instructor mobile number:": "Instructor Mobile Number:",
+	"instructor name:": "Instructor Name:",
+	"language": "Language",
+	"last Name": "Last Name",
+	"lecture": "Lecture",
+	"lectures": "Lectures",
+	"level": "Level",
 	"load more": {
 		"": {
 			"": {
@@ -381,38 +377,38 @@
 		}
 	},
 	"m": "m",
-	"password": "password",
-	"password doesn't match": "password doesn't match",
-	"phone number": "phone number",
-	"please enter a valid mail": "please enter a valid mail",
-	"please enter a valid password, min 8 characters": "please enter a valid password, min 8 characters",
+	"password": "Password",
+	"password doesn't match": "Password doesn't match",
+	"phone number": "Phone Number",
+	"please enter a valid mail": "Please enter a valid mail",
+	"please enter a valid password, min 8 characters": "Please enter a valid password, min 8 characters",
 	"please try again": "please try again",
 	"please try again!": "please try again!",
-	"sign Up": "sign Up",
-	"sign Up as": "sign Up as",
-	"sort": "sort",
-	"sort ": "sort ",
-	"student": "student",
-	"student mobile number:": "student mobile number:",
-	"student name:": "student name:",
-	"this chapter contains lectures, can't be deleted": "this chapter contains lectures, can't be deleted",
-	"this course contains chapters, can't be deleted": "this course contains chapters, can't be deleted",
-	"time m": "time m",
+	"sign Up": "Sign Up",
+	"sign Up as": "Sign Up as",
+	"sort": "Sort",
+	"sort ": "Sort ",
+	"student": "Student",
+	"student mobile number:": "Student Mobile Number:",
+	"student name:": "Student Name:",
+	"this chapter contains lectures, can't be deleted": "This chapter contains lectures, can't be deleted",
+	"this course contains chapters, can't be deleted": "This course contains chapters, can't be deleted",
+	"time m": "Time m",
 	"unblocked Successfully": "unblocked Successfully",
 	"user email:": "user email:",
 	"user ip:": "user ip:",
 	"user mobile number:": "user mobile number:",
 	"user name:": "user name:",
 	"you Don't have any chapters in this course to view": "you Don't have any chapters in this course to view",
-	"you are logged in successfully": "you are logged in successfully",
+	"you are logged in successfully": "You are logged in successfully",
 	"you have been reported, and your account has been disabled for violating our terms": "you have been reported, and your account has been disabled for violating our terms",
-	"your chapter successfully created, congratulations!": "your chapter successfully created, congratulations!",
-	"your chapter successfully updated, congratulations!": "your chapter successfully updated, congratulations!",
-	"your course successfully created, congratulations!": "your course successfully created, congratulations!",
-	"your course successfully updated, congratulations!": "your course successfully updated, congratulations!",
+	"your chapter successfully created, congratulations!": "Your chapter successfully created, congratulations!",
+	"your chapter successfully updated, congratulations!": "Your chapter successfully updated, congratulations!",
+	"your course successfully created, congratulations!": "Your course successfully created, congratulations!",
+	"your course successfully updated, congratulations!": "Your course successfully updated, congratulations!",
 	"your lecture successfully activated!": "your lecture successfully activated!",
-	"your lecture successfully created, congratulations!": "your lecture successfully created, congratulations!",
-	"your lecture successfully deleted!": "your lecture successfully deleted!",
+	"your lecture successfully created, congratulations!": "Your lecture successfully created, congratulations!",
+	"your lecture successfully deleted!": "Your lecture successfully deleted!",
 	"your lecture successfully disabled!": "your lecture successfully disabled!",
-	"your lecture successfully updated!": "your lecture successfully updated!"
+	"your lecture successfully updated!": "Your lecture successfully updated!"
 }
