--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -59,6 +59,7 @@
 	"*Please select lecture File": "*يرجى إختيار ملف المحاضرة",
 	"*Please select promo video": "*يرجى إختيار الفيديو التوضيحى",
 	"*Please select subject": "*يرجى إختيار المادة",
+	"---All---": "---All---",
 	"1st": "الصف الأول الثانوي",
 	"2nd": "الصف الثاني الثانوي",
 	"3rd": "الصف الثالث الثانوي",
@@ -233,6 +234,7 @@
 	"Math": "الرياضيات",
 	"Menu": "القائمة",
 	"Minutes": "الدقائق",
+	"More": "More",
 	"My Courses": "الكورسات الخاصة بك",
 	"My Dashboard": "الرئيسية",
 	"Newest Courses": "الكورسات الجديد",
