--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,6 +59,7 @@
 	"*Please select lecture File": "*Please select lecture File",
 	"*Please select promo video": "*Please select promo video",
 	"*Please select subject": "*Please select subject",
+	"---All---": "---All---",
 	"1st": "First grade secondary",
 	"2nd": "Second grade secondary",
 	"3rd": "Third grade secondary",
@@ -233,6 +234,7 @@
 	"Math": "Math",
 	"Menu": "Menu",
 	"Minutes": "Minutes",
+	"More": "More",
 	"My Courses": "My Courses",
 	"My Dashboard": "My Dashboard",
 	"Newest Courses": "Newest Courses",
