--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -398,7 +398,8 @@
 	"user email:": "user email:",
 	"user ip:": "user ip:",
 	"user mobile number:": "user mobile number:",
-	"user name:": "user name:",
+  "user name:": "user name:",
+  "More":"المزيد",
 	"you Don't have any chapters in this course to view": "لا يوجد أي فصول لهذا الكورس لعرضها!",
 	"you are logged in successfully": "تم تسجيل الدخول بنجاح",
 	"you have been reported, and your account has been disabled for violating our terms": "you have been reported, and your account has been disabled for violating our terms",
