--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -357,7 +357,8 @@
 	"course name:": "Course Name:",
 	"create Date": "Create Date",
 	"email": "Email",
-	"example: Elkashef": "example: Elkashef",
+  "example: Elkashef": "example: Elkashef",
+  "More":"More",
 	"example: Hossam": "example: Hossam",
 	"fee": "Fee",
 	"first Name": "First Name",
